--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <body>
 
 <h1> HL2 Games</h1>
-<p> a list of games i have found. if one doesnt work dont cry about it to me </p>
+<p> a list of games i have found. if one doesnt work cry about it.</p>
+<div>
+<p> also this is not supost to be the fanciest website in the world. cry about that too</p>
 
 </body>
