--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <h1> HL2 Games</h1>
 <p> a list of games i have found. if one doesnt work cry about it.</p>
 <div>
-<p> also this is not supost to be the fanciest website in the world. cry about that too</p>
+<p> also this is not suppost to be the fanciest website in the world. cry about that too</p>
+
+<a href="https://emeraldiswack.com/3.html#U2FsdGVkX1+KSD7YRuKZIicV2eqLnJ5GtpLXgwO1gHaq5EGWWauWMvPMDtzoTOB0Bwf43jWBlZ/BdtONHcnVbA==">Slope</a > 
 
 </body>
