slope is now on another page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <div>
 <p> also this is not suppost to be the fanciest website in the world. cry about that too</p>
 
-<a href="https://emeraldiswack.com/3.html#U2FsdGVkX1+KSD7YRuKZIicV2eqLnJ5GtpLXgwO1gHaq5EGWWauWMvPMDtzoTOB0Bwf43jWBlZ/BdtONHcnVbA==">Slope</a > 
+<a href="slope.html"> Slope </a>
 
 </body>
