acutally got slope working lmao

--- a/slope.html
+++ b/slope.html
@@ -1,1 +1,1 @@
-<iframe src="https://emeraldiswack.com/3.html#U2FsdGVkX1+KSD7YRuKZIicV2eqLnJ5GtpLXgwO1gHaq5EGWWauWMvPMDtzoTOB0Bwf43jWBlZ/BdtONHcnVbA=="> </iframe>
+<iframe width="560" height="315" src="https://emeraldiswack.com/3.html#U2FsdGVkX1+KSD7YRuKZIicV2eqLnJ5GtpLXgwO1gHaq5EGWWauWMvPMDtzoTOB0Bwf43jWBlZ/BdtONHcnVbA==" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
