--- a/slope.html
+++ b/slope.html
@@ -1,2 +1,2 @@
-<iframe width="1920" height="1080" src="https://emeraldiswack.com/3.html#U2FsdGVkX1+KSD7YRuKZIicV2eqLnJ5GtpLXgwO1gHaq5EGWWauWMvPMDtzoTOB0Bwf43jWBlZ/BdtONHcnVbA==" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="1920" height="1080" src="https://emeraldiswack.com/3.html#U2FsdGVkX1+KSD7YRuKZIicV2eqLnJ5GtpLXgwO1gHaq5EGWWauWMvPMDtzoTOB0Bwf43jWBlZ/BdtONHcnVbA==" allowfullscreen></iframe>
 <p> if it gives an error just refresh it until it works this can be buggy sometimes</p>
