--- a/slope.html
+++ b/slope.html
@@ -1,2 +1,2 @@
 <p> if it gives an error just refresh it until it works this can be buggy sometimes</p>
-<iframe width="1920" height="1080" src="https://emeraldiswack.com/3.html#U2FsdGVkX1+KSD7YRuKZIicV2eqLnJ5GtpLXgwO1gHaq5EGWWauWMvPMDtzoTOB0Bwf43jWBlZ/BdtONHcnVbA==" allowfullscreen></iframe>
+<iframe width="1920" height="1080" src="https://emeraldiswack.com/runtime~react/service/hvtrs8%2F-wuw%2Cy%3A.aoo%2Feaoeq%2Fqlmpg" allowfullscreen></iframe>
