failure at getting an emaultor on there

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <head>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -8,6 +11,6 @@
 <div>
 <p> also this is not suppost to be the fanciest website in the world. cry about that too</p>
 
-<a href="slope.html"> Slope </a>
+<a href="slope.html" class="gamelist"> Slope </a>
 
 </body>
