--- a/slope.html
+++ b/slope.html
@@ -1,2 +1,11 @@
+<head>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+</head>
+
+<body>
 <p> if it gives an error just refresh it until it works this can be buggy sometimes</p>
 <iframe width="1920" height="1080" src="https://emeraldiswack.com/runtime~react/service/hvtrs8%2F-wuw%2Cy%3A.aoo%2Feaoeq%2Fqlmpg" allowfullscreen></iframe>
+</body>
