Fancified the website

--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
 <div>
 <p> also this is not suppost to be the fanciest website in the world. cry about that too</p>
 
-<a href="slope.html" class="gamelist"> Slope </a>
 
-</body>
+<h1> Useful tips</h1>
+
+<div class="info">
+    <a href="changelog.html"> changelog </a>
+<br>
+<a href="gamenoworkie.html"  > Games arent working?</a>
+</body> 
+
+</div>
+
+<h1> Games </h1>
+
+<div class="gamelist">
+
+    <a href="slope.html" class="gamelist"> Slope </a>
+
+</div>
