--- a/slope.html
+++ b/slope.html
@@ -12,5 +12,15 @@
 
 <body>
 <p> if it gives an error just refresh it until it works this can be buggy sometimes</p>
-<iframe src="https://emeraldiswack.com/runtime~react/service/hvtrs8%2F-wuw%2Cy%3A.aoo%2Feaoeq%2Fqlmpg" frameborder="0" scrolling="no" onload="resizeIframe(this)" />
+<style>
+    iframe {
+      width: 1px;
+      min-width: 100%;
+    }
+  </style>
+  <script src="/js/iframeResizer.min.js"></script>
+  <iframe id="myIframe" src="https://emeraldiswack.com/runtime~react/service/hvtrs8%2F-wuw%2Cy%3A.aoo%2Feaoeq%2Fqlmpg"></iframe>
+  <script>
+    iFrameResize({ log: true }, '#myIframe')
+  </script>
 </body>
