--- a/slope.html
+++ b/slope.html
@@ -3,24 +3,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-<script>
-    function resizeIframe(obj) {
-      obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px';
-    }
-  </script>
 </head>
 
 <body>
 <p> if it gives an error just refresh it until it works this can be buggy sometimes</p>
-<style>
-    iframe {
-      width: 1px;
-      min-width: 100%;
-    }
-  </style>
-  <script src="/js/iframeResizer.min.js"></script>
-  <iframe id="myIframe" src="https://emeraldiswack.com/runtime~react/service/hvtrs8%2F-wuw%2Cy%3A.aoo%2Feaoeq%2Fqlmpg"></iframe>
-  <script>
-    iFrameResize({ log: true }, '#myIframe')
-  </script>
+<iframe src="https://emeraldiswack.com/runtime~react/service/hvtrs8%2F-wuw%2Cy%3A.aoo%2Feaoeq%2Fqlmpg" frameborder="0" scrolling="no" onload="resizeIframe(this)" />
 </body>
