turip  ip ip ip

--- a/slope.html
+++ b/slope.html
@@ -6,6 +6,6 @@
 </head>
 
 <body>
-<p> if it gives an error just refresh it until it works this can be buggy sometimes</p>
+<p> if it gives an error just refresh it until it works this can be buggy sometimes. Fullscreen the game for a better fit.</p>
 <iframe src="https://emeraldiswack.com/runtime~react/service/hvtrs8%2F-wuw%2Cy%3A.aoo%2Feaoeq%2Fqlmpg" frameborder="0" scrolling="no" onload="resizeIframe(this)" />
 </body>
