ok slope should be fixed

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
 
 <div class="gamelist">
 
-    <a href="slope.html" class="gamelist"> Slope </a>
+    <a href="Slope2/index.html" class="gamelist"> Slope </a>
 
 </div>
