fixed Backend to be better

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <h1> Useful tips</h1>
 
 <div class="info">
-    <a href="changelog.html"> changelog </a>
+    <a href="changelog webs/index.html"> changelog </a>
 <br>
-<a href="gamenoworkie.html"  > Games arent working?</a>
+<a href="Troubleshoots/index.html"  > Games arent working?</a>
 </body> 
 
 </div>
