HELP ME IM IN A BASEMENT

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 <div class="gamelist">
 
-    <a href="Slope2/index.html" class="gamelist"> Slope </a>
+    <a href="Games/Slope2/index.html" class="gamelist"> Slope </a>
+
 
 </div>
