--- a/changelog webs/index.html
+++ b/changelog webs/index.html
@@ -7,6 +7,8 @@
 
 <body>
 
-    <p> Nothing Here yet!</p>
-
+    <h1 class="changelog"> Changelog </h1>
+    <p class="changelog"> This is for major updates. </p>
+    <p class="changelog"> currently there havent been any major updates. </p>
+    <p class="changelog"> we will have major updates very soon once i get everything to how i want it to be </p>
 </body>
