added you are bezos

--- a/changelog webs/index.html
+++ b/changelog webs/index.html
@@ -11,4 +11,5 @@
     <p class="changelog"> This is for major updates. </p>
     <p class="changelog"> currently there havent been any major updates. </p>
     <p class="changelog"> we will have major updates very soon once i get everything to how i want it to be </p>
+    <p> 0.0.1 <br> Added You are bezos </p>
 </body>
