--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <div class="gamelist">
 
     <a href="Games/Slope2/index.html" class="gamelist"> Slope </a>
-
+    <br>
+    <a href="you-are-bezos/index.html" class="gamelist"> You Are Bezos</a>
 
 </div>
