you are bezos has been removed

--- a/changelog webs/index.html
+++ b/changelog webs/index.html
@@ -11,5 +11,6 @@
     <p class="changelog"> This is for major updates. </p>
     <p class="changelog"> currently there havent been any major updates. </p>
     <p class="changelog"> we will have major updates very soon once i get everything to how i want it to be </p>
-    <p> 0.0.1 <br> Added You are bezos </p>
+    <p> 0.0.1 <br>  ̶a̶d̶d̶e̶d̶ ̶y̶o̶u̶ ̶a̶r̶e̶ ̶b̶e̶z̶o̶s̶  </p>
+    <p> had to rollback the update sorry!</p>
 </body>
