had to rollback the update sorry!

--- a/Games/Slope2/index.html
+++ b/Games/Slope2/index.html
@@ -24,7 +24,9 @@
           background-color: #9b34eb;
           color: white;
         }
+        
     </style>
+        <title> ALEKS - login</title>
 </head>
 
 <!--- 
