added you are bezos back!

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <div class="gamelist">
 
-    
     <a href="Games/Slope2/index.html" class="gamelist"> Slope </a>
-
+    <br>
+    <a href="you-are-bezos/index.html" class="gamelist"> you are bezos </a>
 </div>
