--- a/changelog webs/index.html
+++ b/changelog webs/index.html
@@ -12,6 +12,7 @@
     <p class="changelog"> This is for major updates. </p>
     <p class="changelog"> currently there havent been any major updates. </p>
     <p class="changelog"> we will have major updates very soon once i get everything to how i want it to be </p>
-    <p> 0.0.1 <br>  ̶a̶d̶d̶e̶d̶ ̶y̶o̶u̶ ̶a̶r̶e̶ ̶b̶e̶z̶o̶s̶  </p>
-    <p> had to rollback the update sorry!</p>
+    <p> 0.0.1 <br>  Added You are bezos  </p>
+    <br>
+    <p> 0.0.2 <br> added four games <br> 1v1 lol <br> 2048 Cupcakes <br> 2048 <br> a small world cup </p>
 </body>
