--- a/index.html
+++ b/index.html
@@ -31,4 +31,11 @@
     <br>
     <a href="you-are-bezos/index.html" class="gamelist"> you are bezos </a>
     <br>
+    <a href="interstellar-v3games/play/1v1-lol/index.html"> 1v1 lol </a>
+    <br>
+    <a href="interstellar-v3games/play/2048-cupcakes/index.html"> 2048 Cupcakes</a>
+    <br>
+    <a href="interstellar-v3games/play/2048/index.html"> 2048 </a>
+    <br>
+    <a href="interstellar-v3games/play/a-small-world-cup/index.html"> a small world cup</a>
 </a></div>
