--- a/index.html
+++ b/index.html
@@ -39,3 +39,10 @@
     <br>
     <a href="interstellar-v3games/play/a-small-world-cup/index.html"> a small world cup</a>
 </a></div>
+
+<div class="lisence">
+    <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://williammcdowell2.github.io/HL2games/">HL2 games</a> by <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://github.com/williammcdowell2">williammcdowell2</a> is licensed under <a href="http://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-SA 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1"></a></p>
+</div>
+<p class="haha">
+    haha you cant copy my work for yourselves lol
+</p>
