--- a/index.html
+++ b/index.html
@@ -25,19 +25,31 @@
 
 <h1> Games </h1>
 
-<div class="gamelist">
+<div class="list">
 
-    <a href="Games/Slope2/index.html" class="gamelist"> Slope </a>
+    <a href="Games/Slope2/index.html" "> Slope </a>
     <br>
-    <a href="you-are-bezos/index.html" class="gamelist"> you are bezos </a>
+    <a href="you-are-bezos/index.html" "> you are bezos </a>
     <br>
     <a href="interstellar-v3games/play/1v1-lol/index.html"> 1v1 lol </a>
+    <img src="interstellar-v3games/play/1v1-lol/1v1.jpg" width="200">
     <br>
     <a href="interstellar-v3games/play/2048-cupcakes/index.html"> 2048 Cupcakes</a>
+    <img href="interstellar-v3games/play/2048-cupcakes/2048-cupcakes.ico">
     <br>
     <a href="interstellar-v3games/play/2048/index.html"> 2048 </a>
+    <img href="interstellar-v3games/play/2048/2048.png">
     <br>
     <a href="interstellar-v3games/play/a-small-world-cup/index.html"> a small world cup</a>
+    <br>
+    <a href="interstellar-v3games/play/ducklife/index.html"> Duck life 1</a>
+    <br>
+    <a href="interstellar-v3games/play/ducklife2/index.html"> Duck life 2</a>
+    <br>
+    <a href="interstellar-v3games/play/ducklife3/index.html"> Duck life 3</a>
+    <br>
+    <a href="interstellar-v3games/play/ducklife4/index.html"> Duck life 4</a>
+
 </a></div>
 
 <div class="lisence">
@@ -46,3 +58,5 @@
 <p class="haha">
     haha you cant copy my work for yourselves lol
 </p>
+
+
