--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -16,8 +16,7 @@
 <h1> Useful tips</h1>
 
 <div class="info">
-    <a href="changelog webs/index.html"> changelog </a>
-<br>
+    <p> changes are posted on the github release </p>
 <a href="Troubleshoots/index.html"  > Games arent working?</a>
 </body> 
 
