--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<h1> HL2 Games</h1>
+<h1> HL2 Games!</h1>
 <p> a list of games i have found. if one doesnt work cry about it.</p>
 <div>
 <p> also this is not suppost to be the fanciest website in the world. cry about that too</p>
