added 3 more thumbnails

--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
     <img src="interstellar-v3games/play/1v1-lol/1v1.jpg" width="200">
     <br>
     <a href="interstellar-v3games/play/2048-cupcakes/index.html"> 2048 Cupcakes</a>
-    <img href="interstellar-v3games/play/2048-cupcakes/2048-cupcakes.ico">
+    <img src="interstellar-v3games/play/2048-cupcakes/2048-cupcakes.ico">
     <br>
     <a href="interstellar-v3games/play/2048/index.html"> 2048 </a>
-    <img href="interstellar-v3games/play/2048/2048.png">
+    <img src="interstellar-v3games/play/2048/2048.png">
     <br>
     <a href="interstellar-v3games/play/a-small-world-cup/index.html"> a small world cup</a>
+    <img src="interstellar-v3games/play/a-small-world-cup/index.html">
     <br>
     <a href="interstellar-v3games/play/ducklife/index.html"> Duck life 1</a>
     <br>
