added almost every thumbnail

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <p> a list of games i have found. if one doesnt work cry about it.</p>
 <div>
 <p> also this is not suppost to be the fanciest website in the world. cry about that too</p>
+<p> red highlights mean the game is currently not working</p>
+<p class="notworking"> like this </p>
 
 
 <h1> Useful tips</h1>
@@ -40,15 +42,19 @@
     <img src="interstellar-v3games/play/2048/2048.png">
     <br>
     <a href="interstellar-v3games/play/a-small-world-cup/index.html"> a small world cup</a>
-    <img src="interstellar-v3games/play/a-small-world-cup/index.html">
+    <img src="interstellar-v3games/play/a-small-world-cup/">
     <br>
-    <a href="interstellar-v3games/play/ducklife/index.html"> Duck life 1</a>
+    <a href="interstellar-v3games/play/ducklife/index.html" class="notworking"> Duck life 1</a>
+    <img src="interstellar-v3games/play/ducklife/ducklife.png">
     <br>
-    <a href="interstellar-v3games/play/ducklife2/index.html"> Duck life 2</a>
+    <a href="interstellar-v3games/play/ducklife2/index.html" class="notworking"> Duck life 2</a>
+    <img src="interstellar-v3games/play/ducklife2/ducklife2.png">
     <br>
-    <a href="interstellar-v3games/play/ducklife3/index.html"> Duck life 3</a>
+    <a href="interstellar-v3games/play/ducklife3/index.html" class="notworking"> Duck life 3</a>
+    <img src="interstellar-v3games/play/ducklife3/ducklife3.png">
     <br>
-    <a href="interstellar-v3games/play/ducklife4/index.html"> Duck life 4</a>
+    <a href="interstellar-v3games/play/ducklife4/index.html"class="notworking"> Duck life 4</a>
+    <img src="interstellar-v3games/play/ducklife4/ducklife4.png">
 
 </a></div>
 
