added three games

--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
     <br>
     <a href="interstellar-v3games/play/ducklife4/index.html"class="notworking"> Duck life 4</a>
     <img src="interstellar-v3games/play/ducklife4/ducklife4.png">
+    <br>
+    <a href="interstellar-v3games/play/btd-6/index.html">Btd 6</a>
+    <br>
+    <a href="interstellar-v3games/play/basket-bros/index.html"> Basket Bros </a>
+    <br>
+    <a href="interstellar-v3games/play/agar-io/index.html"> agar.io </a>
+    </div>
 
 </a></div>
 
