--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <div>
 <p> also this is not suppost to be the fanciest website in the world. cry about that too</p>
 <p> red highlights mean the game is currently not working</p>
-<p class="notworking"> like this </p>
+<p class="haha
+"> would show a example if it didnt mess with the webpage</p>
 
 
 <h1> Useful tips</h1>
