🤳⚗️ Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -1,76 +1,148 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
+    rel="stylesheet"
+  />
 </head>
 <body>
+  <h1>HL2 Games!</h1>
+  <p>a list of games i have found. if one doesnt work cry about it.</p>
+  <div>
+    <p>
+      also this is not suppost to be the fanciest website in the world. cry
+      about that too
+    </p>
+    <p>red highlights mean the game is currently not working</p>
+    <p class="haha">i wish an example worked</p>
 
-<h1> HL2 Games!</h1>
-<p> a list of games i have found. if one doesnt work cry about it.</p>
-<div>
-<p> also this is not suppost to be the fanciest website in the world. cry about that too</p>
-<p> red highlights mean the game is currently not working</p>
-<p class="haha
-"> would show a example if it didnt mess with the webpage</p>
+    <h1>Useful tips</h1>
 
+    <div class="info">
+      <p>changes are posted on the github release</p>
+      <a href="Troubleshoots/index.html"> Games arent working?</a>
 
-<h1> Useful tips</h1>
-
-<div class="info">
-    <p> changes are posted on the github release </p>
-<a href="Troubleshoots/index.html"  > Games arent working?</a>
-</body> 
-
-</div>
-
-<h1> Games </h1>
-
-<div class="list">
-
-    <a href="Games/Slope2/index.html" "> Slope </a>
-    <br>
-    <a href="you-are-bezos/index.html" "> you are bezos </a>
-    <br>
-    <a href="interstellar-v3games/play/1v1-lol/index.html"> 1v1 lol </a>
-    <img src="interstellar-v3games/play/1v1-lol/1v1.jpg" width="200">
-    <br>
-    <a href="interstellar-v3games/play/2048-cupcakes/index.html"> 2048 Cupcakes</a>
-    <img src="interstellar-v3games/play/2048-cupcakes/2048-cupcakes.ico">
-    <br>
-    <a href="interstellar-v3games/play/2048/index.html"> 2048 </a>
-    <img src="interstellar-v3games/play/2048/2048.png">
-    <br>
-    <a href="interstellar-v3games/play/a-small-world-cup/index.html"> a small world cup</a>
-    <img src="interstellar-v3games/play/a-small-world-cup/">
-    <br>
-    <a href="interstellar-v3games/play/ducklife/index.html" class="notworking"> Duck life 1</a>
-    <img src="interstellar-v3games/play/ducklife/ducklife.png">
-    <br>
-    <a href="interstellar-v3games/play/ducklife2/index.html" class="notworking"> Duck life 2</a>
-    <img src="interstellar-v3games/play/ducklife2/ducklife2.png">
-    <br>
-    <a href="interstellar-v3games/play/ducklife3/index.html" class="notworking"> Duck life 3</a>
-    <img src="interstellar-v3games/play/ducklife3/ducklife3.png">
-    <br>
-    <a href="interstellar-v3games/play/ducklife4/index.html"class="notworking"> Duck life 4</a>
-    <img src="interstellar-v3games/play/ducklife4/ducklife4.png">
-    <br>
-    <a href="interstellar-v3games/play/btd-6/index.html">Btd 6</a>
-    <br>
-    <a href="interstellar-v3games/play/basket-bros/index.html"> Basket Bros </a>
-    <br>
-    <a href="interstellar-v3games/play/agar-io/index.html"> agar.io </a>
+      <body />
     </div>
 
-</a></div>
+    <h1>Games</h1>
 
-<div class="lisence">
-    <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://williammcdowell2.github.io/HL2games/">HL2 games</a> by <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://github.com/williammcdowell2">williammcdowell2</a> is licensed under <a href="http://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY-SA 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1"></a></p>
-</div>
-<p class="haha">
-    haha you cant copy my work for yourselves lol
-</p>
+    <div class="list">
+      
+      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> Pyro Fanboy Club </a>
+      
+      <a href="Games/Slope2/index.html"> Slope </a>
+      <br />
+      <a href="you-are-bezos/index.html"> you are bezos </a>
+      <br />
+      <a href="https://williammcdowell2.github.io/interstellar-v3games/play/1v1-lol/index.html"> 1v1 lol </a>
+      <img src="https://williammcdowell2.github.io/interstellar-v3games/play/1v1-lol/1v1.jpg" width="200" />
+      <br />
+      <a href="https://williammcdowell2.github.io/interstellar-v3games/play/2048-cupcakes/index.html">
+        2048 Cupcakes</a
+      >
+      <img src="https://williammcdowell2.github.io/interstellar-v3games/play/2048-cupcakes/2048-cupcakes.ico" />
+      <br />
+      <a href="https://williammcdowell2.github.io/interstellar-v3games/play/2048/index.html"> 2048 </a>
+      <img src="https://williammcdowell2.github.io/interstellar-v3games/play/2048/2048.png" />
+      <br />
+      <a href="https://williammcdowell2.github.io/interstellar-v3games/play/a-small-world-cup/index.html">
+        a small world cup</a
+      >
+      <br />
+      <a
+        href="https://williammcdowell2.github.io/interstellar-v3games/play/ducklife/index.html"
+        class="notworking"
+      >
+        Duck life 1</a
+      >
+      <img src="https://williammcdowell2.github.io/interstellar-v3games/play/ducklife/ducklife.png" />
+      <br />
+      <a
+        href="https://williammcdowell2.github.io/interstellar-v3games/play/ducklife2/index.html"
+        class="notworking"
+      >
+        Duck life 2</a
+      >
+      <img src="https://williammcdowell2.github.io/interstellar-v3games/play/ducklife2/ducklife2.png" />
+      <br />
+      <a
+        href="https://williammcdowell2.github.io/interstellar-v3games/play/ducklife3/index.html"
+        class="notworking"
+      >
+        Duck life 3</a
+      >
+      <img src="https://williammcdowell2.github.io/interstellar-v3games/play/ducklife3/ducklife3.png" />
+      <br />
+      <a
+        href="https://williammcdowell2.github.io/interstellar-v3games/play/ducklife4/index.html"
+        class="notworking"
+      >
+        Duck life 4</a
+      >
+      <img src="https://williammcdowell2.github.io/interstellar-v3games/play/ducklife4/ducklife4.png" />
+      <br />
+      <a href="https://williammcdowell2.github.io/interstellar-v3games/play/btd-6/index.html">Btd 6</a>
+      <br />
+      <a href="https://williammcdowell2.github.io/interstellar-v3games/play/basket-bros/index.html">
+        Basket Bros
+      </a>
+      <br />
+      <a href="https://williammcdowell2.github.io/interstellar-v3games/play/agar-io/index.html"> agar.io </a>
+    </div>
 
+    <a />
+    <div />
 
+    <div class="lisence">
+      <p
+        xmlns:cc="http://creativecommons.org/ns#"
+        xmlns:dct="http://purl.org/dc/terms/"
+      >
+        <a
+          property="dct:title"
+          rel="cc:attributionURL"
+          href="https://williammcdowell2.github.io/HL2games/"
+          >HL2 games</a
+        >
+        by
+        <a
+          rel="cc:attributionURL dct:creator"
+          property="cc:attributionName"
+          href="https://github.com/williammcdowell2"
+          >williammcdowell2</a
+        >
+        is licensed under
+        <a
+          href="http://creativecommons.org/licenses/by-sa/4.0/?ref=chooser-v1"
+          target="_blank"
+          rel="license noopener noreferrer"
+          style="display: inline-block"
+          >CC BY-SA 4.0<img
+            style="
+              height: 22px !important;
+              margin-left: 3px;
+              vertical-align: text-bottom;
+            "
+            src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" /><img
+            style="
+              height: 22px !important;
+              margin-left: 3px;
+              vertical-align: text-bottom;
+            "
+            src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" /><img
+            style="
+              height: 22px !important;
+              margin-left: 3px;
+              vertical-align: text-bottom;
+            "
+            src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1"
+        /></a>
+      </p>
+    </div>
+    <p class="haha">haha you cant copy my work for yourselves lol</p>
+  </div>
+</body>
