removed duck life 1-4

--- a/index.html
+++ b/index.html
@@ -50,52 +50,19 @@
       <img src="https://williammcdowell2.github.io/interstellar-v3games/play/2048/2048.png" />
       <br />
       <a href="https://williammcdowell2.github.io/interstellar-v3games/play/a-small-world-cup/index.html">
-        a small world cup</a
-      >
-      <br />
-      <a
-        href="https://williammcdowell2.github.io/interstellar-v3games/play/ducklife/index.html"
-        class="notworking"
-      >
-        Duck life 1</a
-      >
-      <img src="https://williammcdowell2.github.io/interstellar-v3games/play/ducklife/ducklife.png" />
-      <br />
-      <a
-        href="https://williammcdowell2.github.io/interstellar-v3games/play/ducklife2/index.html"
-        class="notworking"
-      >
-        Duck life 2</a
-      >
-      <img src="https://williammcdowell2.github.io/interstellar-v3games/play/ducklife2/ducklife2.png" />
-      <br />
-      <a
-        href="https://williammcdowell2.github.io/interstellar-v3games/play/ducklife3/index.html"
-        class="notworking"
-      >
-        Duck life 3</a
-      >
-      <img src="https://williammcdowell2.github.io/interstellar-v3games/play/ducklife3/ducklife3.png" />
-      <br />
-      <a
-        href="https://williammcdowell2.github.io/interstellar-v3games/play/ducklife4/index.html"
-        class="notworking"
-      >
-        Duck life 4</a
-      >
-      <img src="https://williammcdowell2.github.io/interstellar-v3games/play/ducklife4/ducklife4.png" />
-      <br />
+        a small world cup</a>
+
+        <br>
       <a href="https://williammcdowell2.github.io/interstellar-v3games/play/btd-6/index.html">Btd 6</a>
+
       <br />
+      
       <a href="https://williammcdowell2.github.io/interstellar-v3games/play/basket-bros/index.html">
         Basket Bros
       </a>
       <br />
       <a href="https://williammcdowell2.github.io/interstellar-v3games/play/agar-io/index.html"> agar.io </a>
     </div>
-
-    <a />
-    <div />
 
     <div class="lisence">
       <p
