revamped the site a bit

--- a/Troubleshoots/index.html
+++ b/Troubleshoots/index.html
@@ -6,11 +6,16 @@
 </head>
 
 <body>
-    <h1> game no workie? </h1>
-    <h3> Well lets see whats wrong</h3>
-    <p> so sometimes your game will not work for some reason and thats why this exists </p>
-    <p> number one it gives an error might be ebcause you didnt reload the game with the reload bit when it gives an error just hit reload and it will be fine</p>
-    <p> number two it takes a while for the game to load so be paitent and cry about it</p>
-    <p> number three 500 internal server error right click on the frame where the game would normally be and hit reload frame it should work</p>
-    <p> and thats all i have for you buh-bye </p>
+    <h1> FAQ/Troubleshooting</h1>
+    <p class="haha"> well lets see if we can fix it</p>
+    <h4>1. i can access the front page but not any other games</h4>
+    <p> that means that the backend were all of our games are have been blocked. we currently have no way to fix this. </p>
+    <h4> ok so why are all of your games on a diffrent repo? </h4>
+    <p> takes 10-20 minuntes for this to deploy when we have all of our games on the frontend. when we dont use that method and i only need to update this end i can without any issues </p>
+    <h4> 2. why am i getting redirected to your backend when i try to play a game</h4>
+    <p> i do not use iframes because they suck. plus its alot better because it fits the whole frame instead of a box in the middle</p>
+    <h4> 3. why do you not have spotify, youtube, coolmathgames, and things like that.</h4>
+    <p> we do not have these things as i cant get a proxy for those things to work maybe in some date i will get one.</p>
+    <h4> 4. why do you not have back buttons on your site?</h4>
+    <a href="index.html" class="info"> Home </a>
 </body>
