--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="info">
       <p>changes are posted on the github release</p>
-      <a href="Troubleshoots/index.html"> Games arent working?</a>
+      <a href="Troubleshoots/index.html"> FAQ/Troubleshooting</a>
 
       <body />
     </div>
