working on a bypasser

--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
       </a>
       <br />
       <a href="https://williammcdowell2.github.io/interstellar-v3games/play/agar-io/index.html"> agar.io </a>
+      <br>
+      <a href="i"
     </div>
 
     <div class="lisence">
