--- a/plooshidoc/index.html
+++ b/plooshidoc/index.html
@@ -1,2 +1,3 @@
 <h1> somtimes this may not work <h1>
-<iframe src="https://plooshidocs.online/"  width="10"
+<p class="haha"> also out of frame lol </p>
+<iframe src="https://plooshidocs.online/" height="700px" width="700px"
