--- a/plooshidoc/index.html
+++ b/plooshidoc/index.html
@@ -1,3 +1,4 @@
 <h1> somtimes this may not work <h1>
 <p class="haha"> also out of frame lol </p>
-<iframe src="https://plooshidocs.online/" height="700px" width="700px"
+<p> credit to plooshi docs for this proxy </p>
+<iframe src="https://plooshidocs.online/" height="700px" width="700px">
