--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
     <h1>Games</h1>
 
     <div class="list">
-      
+      <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=d_cjwRe1YEO12GFDGaORDPrJgPSUExxIlBppaUM6RNxUQjVXNVFVRERNQktCVFJBNTU0ME1ZUFhDNy4u"> add a game </a>
+      <br>
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> Pyro Fanboy Club </a>
       <br>
       <a href="plooshidoc/index.html"> Bypasser </a>
       <img src="plooshidoc/index.svg">
       <br>
       <a href="Games/Slope2/index.html"> Slope </a>
-      <img src="thumbnails/download (4).jpeg">
+      <img src="thumbnails/download (4).jpeg"
       <br />
       <a href="you-are-bezos/index.html"> you are bezos </a>
-      <img src="thumbnails/download (8).jpeg">
       <br />
       <a href="https://williammcdowell2.github.io/interstellar-v3games/play/1v1-lol/index.html"> 1v1 lol </a>
       <img src="https://williammcdowell2.github.io/interstellar-v3games/play/1v1-lol/1v1.jpg" width="200" />
