--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
       <br>
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> Pyro Fanboy Club </a>
       <br>
+      <a href="https://scratch.mit.edu/projects/821384038/fullscreen/"> among us</a>
+      <br>
       <a href="plooshidoc/index.html"> Bypasser </a>
       <img src="plooshidoc/index.svg">
       <br>
       <a href="Games/Slope2/index.html"> Slope </a>
       <img src="thumbnails/download (4).jpeg"
-      <br />
+      <br/>
       <a href="you-are-bezos/index.html"> you are bezos </a>
       <br />
       <a href="https://williammcdowell2.github.io/interstellar-v3games/play/1v1-lol/index.html"> 1v1 lol </a>
@@ -54,7 +56,7 @@
       <br />
       <a href="https://williammcdowell2.github.io/interstellar-v3games/play/2048/index.html"> 2048 </a>
       <img src="https://williammcdowell2.github.io/interstellar-v3games/play/2048/2048.png" />
-      <br />
+      <br />                                                                                          
       <a href="https://williammcdowell2.github.io/interstellar-v3games/play/a-small-world-cup/index.html">a small world cup</a>
       <img src="thumbnails/images (18).jpeg">
 
