--- a/plooshidoc/index.html
+++ b/plooshidoc/index.html
@@ -1,3 +1,16 @@
+
+<!DOCTYPE html>
+<head>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap"
+    rel="stylesheet"
+  />
+</head>
+
+
 <h1> somtimes this may not work <h1>
 <p class="haha"> also out of frame lol </p>
 <p> credit to plooshi docs for this proxy </p>
