--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 <body>
   <p class="alerts"></p>
   <h1>HL2 Games!</h1>
+  
   <p>a list of games i have found. if one doesnt work cry about it.</p>
   <div>
     <p>
       also this is not suppost to be the fanciest website in the world. cry
       about that too
     </p>
+    test test
     <p>red highlights mean the game is currently not working</p>
     <p class="haha">i wish an example worked</p>
 
