--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <p class="alerts"></p>
   <h1>HL2 Games!</h1>
-  test
+  tests
   <p>a list of games i have found. if one doesnt work cry about it.</p>
   <div>
     <p>
