--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@ rel="stylesheet"
 />
 </head>
 <body>
-<p class="alerts"></p>
+<p class="alerts">i am currently experminting with adding cheats to my page <br> sorry if this page goes to poop</p>
+<div class="navigation">
+    <a href="index.html">Home</a>
+    <a href="gaymes.html">Games</a>
+    <a href="Hacks.html">Hacks?</a>
+  </div>
 <h1>HL2 Games!</h1>
-<p>a list of games i have found. if one doesnt work cry about it.</p>
+<p>a list of games I have found. If one doesn't work, cry about it.</p>
 <div>
+
 <p>
 also this is not suppost to be the fanciest website in the world. cry
 about that too
@@ -29,83 +35,5 @@ about that too
 </div>
 </div>
 
-<h1>Games</h1>
 
-<div class="list">
-<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=d_cjwRe1YEO12GFDGaORDPrJgPSUExxIlBppaUM6RNxUQjVXNVFVRERNQktCVFJBNTU0ME1ZUFhDNy4u"> add a game </a>
-<br>
-<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> Pyro Fanboy Club </a>
-<br>
-<a href="https://scratch.mit.edu/projects/821384038/fullscreen/"> among us</a>
-<br>
-<a href="plooshidoc/index.html"> Bypasser </a>
-<img src="plooshidoc/index.svg">
-<br>
-<a href="Games/Slope2/index.html"> Slope </a>
-<img src="thumbnails/download (4).jpeg">
-<br/>
-<a href="you-are-bezos/index.html"> you are bezos </a>
-<br />
-<a href="https://williammcdowell2.github.io/interstellar-v3games/play/1v1-lol/index.html"> 1v1 lol </a>
-<img src="https://williammcdowell2.github.io/interstellar-v3games/play/1v1-lol/1v1.jpg" width="200" />
-<br />
-<a href="https://williammcdowell2.github.io/interstellar-v3games/play/2048-cupcakes/index.html">
-2048 Cupcakes</a
->
-<img src="https://williammcdowell2.github.io/interstellar-v3games/play/2048-cupcakes/2048-cupcakes.ico" />
-<br />
-<a href="https://williammcdowell2.github.io/interstellar-v3games/play/2048/index.html"> 2048 </a>
-<img src="https://williammcdowell2.github.io/interstellar-v3games/play/2048/2048.png" />
-</div>
 
-<p>red highlights mean the game is currently not working</p>
-
-<h1>Useful tips</h1>
-
-<div class="info">
-<p>changes are posted on the github release</p>
-<a href="Troubleshoots/index.html"> FAQ/Troubleshooting</a>
-</div>
-
-<h1>Games</h1>
-
-<div class="list">
-<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=d_cjwRe1YEO12GFDGaORDPrJgPSUExxIlBppaUM6RNxUQjVXNVFVRERNQktCVFJBNTU0ME1ZUFhDNy4u"> add a game </a>
-<br>
-<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> Pyro Fanboy Club </a>
-<br>
-<a href="https://scratch.mit.edu/projects/821384038/fullscreen/"> among us</a>
-<br>
-<a href="plooshidoc/index.html"> Bypasser </a>
-<img src="plooshidoc/index.svg">
-<br>
-<a href="Games/Slope2/index.html"> Slope </a>
-<img src="thumbnails/download (4).jpeg">
-<br/>
-<a href="you-are-bezos/index.html"> you are bezos </a>
-<br />
-<a href="https://williammcdowell2.github.io/interstellar-v3games/play/1v1-lol/index.html"> 1v1 lol </a>
-<img src="https://williammcdowell2.github.io/interstellar-v3games/play/1v1-lol/1v1.jpg" width="200" />
-<br />
-<a href="https://williammcdowell2.github.io/interstellar-v3games/play/2048-cupcakes/index.html">
-2048 Cupcakes</a
->
-<img src="https://williammcdowell2.github.io/interstellar-v3games/play/2048-cupcakes/2048-cupcakes.ico" />
-<br />
-<a href="https://williammcdowell2.github.io/interstellar-v3games/play/2048/index.html"> 2048 </a>
-<img src="https://williammcdowell2.github.io/interstellar-v3games/play/2048/2048.png" />
-</div>
-
-<p>red highlights mean the game is currently not working</p>
-
-<h1>Useful tips</h1>
-
-<div class="info">
-<p>changes are posted on the github release</p>
-<a href="Troubleshoots/index.html"> FAQ/Troubleshooting</a>
-</div>
-
-<h1>Games</h1>
-
-<div class="list">
-<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=d_cjwRe1YEO12GFDGaORDPrJgPSUExxIlBppaUM6RNxUQj
