im fuckin done updating this nobody uses this crap

--- a/gaymes.html
+++ b/gaymes.html
@@ -45,7 +45,22 @@ rel="stylesheet"/>
 <br />
 <a href="https://williammcdowell2.github.io/interstellar-v3games/play/2048/index.html"> 2048 </a>
 <img src="https://williammcdowell2.github.io/interstellar-v3games/play/2048/2048.png" />
+
+<a href="https://williammcdowell2.github.io/interstellar-v3games/play/among-us/index.html"> among us </a>
+<img src="https://williammcdowell2.github.io/interstellar-v3games/play/among-us/img/red.png"/>
+
 </div>
+
+
+
+
+
+
+
+
+
+
+
 <div class="lisence">
   <p
     xmlns:cc="http://creativecommons.org/ns#"
