in the process of adding every game

--- a/gaymes.html
+++ b/gaymes.html
@@ -17,37 +17,27 @@ rel="stylesheet"/>
         <a href="Hacks.html">Hacks?</a>
       </div>
 
+<h1> I Am Restarting this secton from scratch. <br> as i fucked alot of things up</h1>
+
 
     <h1>Games</h1>
 
+
 <div class="list">
 <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=d_cjwRe1YEO12GFDGaORDPrJgPSUExxIlBppaUM6RNxUQjVXNVFVRERNQktCVFJBNTU0ME1ZUFhDNy4u"> add a game </a>
-<br>
-<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> Pyro Fanboy Club </a>
-<br>
-<a href="https://scratch.mit.edu/projects/821384038/fullscreen/"> among us</a>
-<br>
-<a href="plooshidoc/index.html"> Bypasser </a>
-<img src="plooshidoc/index.svg">
-<br>
-<a href="Games/Slope2/index.html"> Slope </a>
-<img src="thumbnails/download (4).jpeg">
-<br/>
-<a href="you-are-bezos/index.html"> you are bezos </a>
-<br />
-<a href="https://williammcdowell2.github.io/interstellar-v3games/play/1v1-lol/index.html"> 1v1 lol </a>
-<img src="https://williammcdowell2.github.io/interstellar-v3games/play/1v1-lol/1v1.jpg" width="200" />
-<br />
-<a href="https://williammcdowell2.github.io/interstellar-v3games/play/2048-cupcakes/index.html">
-2048 Cupcakes</a
->
-<img src="https://williammcdowell2.github.io/interstellar-v3games/play/2048-cupcakes/2048-cupcakes.ico" />
-<br />
-<a href="https://williammcdowell2.github.io/interstellar-v3games/play/2048/index.html"> 2048 </a>
-<img src="https://williammcdowell2.github.io/interstellar-v3games/play/2048/2048.png" />
+<a href="https://raw.githack.com/3kh0/3kh0-assets/main/1/index.html"> 1</a>
+<a href="https://raw.githack.com/3kh0/3kh0-assets/main/10-minutes-till-dawn/index.html"> 10 minuntes till dawn </a>
+<a href="https://raw.githack.com/3kh0/3kh0-assets/main/100ng/index.html"> 100ng </a>
+<a href="https://raw.githack.com/3kh0/3kh0-assets/main/1v1lol/index.html"> 1v1 lol </a>
+<a href="https://raw.githack.com/3kh0/3kh0-assets/main/1v1space/index.html">1v1 space</a>
+<a href="https://raw.githack.com/3kh0/3kh0-assets/main/2048-multitask/index.html"> 2048 multitask</a>
+<a href="https://raw.githack.com/3kh0/3kh0-assets/main/2048/index.html"> 2048 </a>
+<a href="https://raw.githack.com/3kh0/3kh0-assets/main/9007199254740992/index.html"> 9007199254740992 </a>
+<a href="https://raw.githack.com/3kh0/3kh0-assets/main/99bals/index.html"> 99balls </a>
 
-<a href="https://williammcdowell2.github.io/interstellar-v3games/play/among-us/index.html"> among us </a>
-<img src="https://williammcdowell2.github.io/interstellar-v3games/play/among-us/img/red.png"/>
+<br>
+
+
 
 </div>
 
